--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "6.6.7",
-    "tslib": "2.3.1",
-    "zone.js": "0.11.4",
-    "jasmine-core": "3.8.0",
-    "@angular/core": "12.1.5",
-    "@angular/forms": "12.1.5",
-    "@angular/common": "12.1.5",
-    "@angular/router": "12.1.5",
-    "@angular/compiler": "12.1.5",
-    "@angular/animations": "12.1.5",
-    "@angular/platform-browser": "12.1.5",
-    "angular-in-memory-web-api": "0.11.0",
-    "@angular/platform-browser-dynamic": "12.1.5"
+    "@angular/animations": "16.0.5",
+    "@angular/common": "16.0.5",
+    "@angular/compiler": "16.0.5",
+    "@angular/core": "16.0.5",
+    "@angular/forms": "16.0.5",
+    "@angular/platform-browser": "16.0.5",
+    "@angular/platform-browser-dynamic": "16.0.5",
+    "@angular/router": "16.0.5",
+    "@types/jasmine": "4.0.3",
+    "flexlayout": "^1.0.6",
+    "rxjs": "7.8.1",
+    "tslib": "2.5.3",
+    "zone.js": "0.13.1"
   },
   "scripts": {
     "ng": "ng",
